--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.5",
+        "doctrine/dbal": "~2.3",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
