Criando barra de progress ao iniciar Ajax

--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ngx-pagination": "^3.1.1",
+    "pace": "github:HubSpot/pace#v1.0.2",
     "pnotify": "^4.0.0-beta.2",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
