--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -25,11 +25,14 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ng2-select2": "^1.0.0-beta.12",
     "ngx-pagination": "^3.1.1",
-    "pace": "github:HubSpot/pace#v1.0.2",
+    "pace": "github:HubSpot/pace#c6846cbf6b928e9903b569269fa9fbf32f2554f4",
     "pnotify": "^4.0.0-beta.2",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
+    "select2": "^4.0.3",
+    "select2-bootstrap4-theme": "^1.0.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
