--- a/angular-app/angular.json
+++ b/angular-app/angular.json
@@ -28,7 +28,8 @@
               "node_modules/@fortawesome/fontawesome-free-webfonts/css/fa-solid.css",
               "node_modules/@fortawesome/fontawesome-free-webfonts/css/fontawesome.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/select2/dist/css/select2.min.css"
+              "node_modules/select2/dist/css/select2.min.css",
+              "node_modules/select2-bootstrap4-theme/dist/select2-bootstrap4.min.css"
             ],
             "scripts": [
               "node_modules/popper.js/dist/umd/popper.min.js",
