--- a/whatsapp/package.json
+++ b/whatsapp/package.json
@@ -24,9 +24,12 @@
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
+    "firebase": "^5.2.0",
+    "firebaseui": "^3.1.1",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
+    "scriptjs": "^2.5.8",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
   },
