--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "caouecs/laravel-lang": "~4.0",
         "cviebrock/eloquent-sluggable": "^4.5",
         "fideloper/proxy": "^4.0",
+        "kreait/firebase-php": "4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "mnabialek/laravel-eloquent-filter": "^0.1.1",
