--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@auth0/angular-jwt": "^2.0.0",
+    "@fancyapps/fancybox": "^3.3.5",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
