--- a/react-app/package.json
+++ b/react-app/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "4.3.1",
     "font-awesome": "^4.7.0",
     "jquery": "3.3.1",
+    "pnotify": "4.0.0-beta.2",
     "popper.js": "1.14.7",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
