--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,14 +9,15 @@
     "jquery": "3.3.1",
     "pnotify": "4.0.0-beta.2",
     "popper.js": "1.14.7",
-    "react": "^16.10.1",
+    "react": "^16.12.0",
     "react-block-ui": "^1.3.2",
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.3",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.0",
     "react-scripts": "3.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-promise": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
