--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,6 +6,7 @@
     "axios": "0.18.0",
     "bootstrap": "4.3.1",
     "font-awesome": "^4.7.0",
+    "formik": "^2.1.1",
     "jquery": "3.3.1",
     "pnotify": "4.0.0-beta.2",
     "popper.js": "1.14.7",
@@ -17,7 +18,8 @@
     "react-router-dom": "4.2.0",
     "react-scripts": "3.1.2",
     "redux": "^4.0.4",
-    "redux-promise": "^0.6.0"
+    "redux-promise": "^0.6.0",
+    "yup": "^0.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
